# angusjf

./: .gitattributes  .gitignore  CNAME  Cargo.toml  KUL_CV_FINAL.ipynb  README.md  about.html  all-paths.json  animation.js  build  code-genius.html  content.json  elm.js  glitch.html  hanzi.html  index.html  index.js  live  main.js  manifest.json  package-lock.json  package.json  plants.html  script.js  style.css  stylesheet.css  vimle.html
.github/workflows/: deploy.yml
agile-signees/: content.json  index.html
apps/: code-genius.html  glitch.html  hanzi.html  pico-f.css  pico-f.html  pico-f.js  playlist2graph.html  playlist2graph.js  vimle.html
bye/: content.json  index.html
content/blog/: 14kb.md  astro-integration-elm.md  elixir-vs-rust-compilers.md  elixir-vs-rust.md  elm-for-react-devs.md  eslint-removeme.md  faux-controlled-components.md  templating.md  (+5 more)
elm-for-react-devs/: content.json  index.html
faux-controlled-components/: content.json  index.html
how-to-uninstall-vscode/: content.json  index.html
images/: calendar-range.pxm  vim.pxm
inline-styles/: content.json  index.html
javascript-imports/: content.json  index.html
js-spread-operator/: content.json  index.html
neovim-for-js/: content.json  index.html
public/: blogpost.css  draw.mjs  index.css  manifest.json  plants.html  style.css  thumbhash.mjs  transitions.mjs
recoil/: content.json  index.html
scripts/: build
src/: Markdown.elm  js.rs  main.rs
templates/: blog.html  card.html  index.html  root.html
tree/: content.json  index.html
variance/: content.json  index.html
(+36 files in other folders)
