[package]
name = "angusjf-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24.6", features = ["webp-encoder"] }
pulldown-cmark = "0.9.2"
chrono = "0.4"
serde_derive = "1.0.147"
serde = "1.0.147"
serde_yaml = "0.9"
thumbhash = "0.1.0"
base64 = "0.21.0"
lol_html = "1.1.1"
reqwest = "0.11.20"
deno_core = "0.208.0"
deno_emit = "0.27.0"
deno_graph = "0.54.0"
tokio = "1.32.0"
minify-js = "0.5.6"
platelet = { git = "https://github.com/angusjf/platelet.git" }
serde_json = "1.0.117"
